<?xml version="1.0"?>
<package format="3">
  <name>republisher</name>
  <version>0.0.1</version>
  <description>Republisher action example</description>
  <maintainer email="rolma271@gmail.com">marco</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
